?fix image spacing on mobile chrome

--- a/_sass/base/_blurbs.scss
+++ b/_sass/base/_blurbs.scss
@@ -18,7 +18,10 @@
 		& img {
 			max-width: 270px;
 			display: block;
-			margin: 4em auto;
+			margin-top: 4em;
+			margin-bottom; 4em;
+			margin-left: auto;
+			margin-right: auto;
 		}
 		margin-top: -2em;
 	}
